docs/v1.2.0/guides/client/setup.mdx
---
title: "Running the Parallax client"
description: "Step-by-step guide for installing and running the Parallax client on your machine."
---

Running your own **Parallax node** is the best way to fully participate in the network—whether you're a miner, or just a curious user who wants to verify everything independently.  
This guide walks you through downloading, installing, and running the Parallax client with the simplest possible steps.

For more technical details about the Parallax client, please read the [Parallax client technical documentation](../../parallax-client/getting-started/introduction).

---

## Prerequisites

Before you begin, make sure you have:

- A computer running **Windows, macOS, or Linux**
- At least **4 GB of RAM** (8 GB recommended for mining)
- At least 50 GB of space (SSD recommended)
- A stable internet connection
- Open `32110` TCP & UDP ports in your router/firewall (recommended)

---

## Step-by-step Guide

<Steps>
  <Step title="Download the Parallax client">
    Go to our [GitHub Releases page](https://github.com/ParallaxProtocol/parallax/releases/latest) and download the correct file for your operating system:

    - **Windows 64-bit**: `parallax-windows-amd64.zip`
    - **Windows 32-bit**: `parallax-windows-386.zip`
    - **macOS (Intel)**: `parallax-darwin-amd64.tar.gz`
    - **macOS (Apple Silicon)**: `parallax-darwin-arm64.tar.gz`
    - **Linux (x86)**: `parallax-linux-amd64.tar.gz`
    - **Linux (ARM)**: `parallax-linux-arm64.tar.gz`
    - **Linux (ARMv7)**: `parallax-linux-armv7.tar.gz`
  </Step>
  <Step title="Unzip the package">
    Extract the downloaded file to a folder of your choice.

    Inside, you’ll see these programs:
    - **prlx** → the Parallax client (this is the one you’ll run)
    - **clef** → account management utility (advanced users only)
    - **parallaxkey** → utility for generating Parallax addresses (advanced users only)
  </Step>
  <Step title="Start the client">
    - **Windows / macOS**: Simply double-click `prlx` to start your Parallax node.  
    - **Linux**: You may need to right-click → “Allow executing file as program” before double-clicking.

    A window or terminal will open showing logs as the node connects to the network.  
    That’s it — you’re running a Parallax node!

    <Note>
      By default, the Parallax client will store the block chain data in this folder depending on your Operating System:
      - Windows: `%APPDATA%\Parallax` or `%LOCALAPPDATA%\Parallax`
      - macOS: `~/Library/Parallax`
      - Linux: `~/.parallax`
    </Note>
  </Step>
</Steps>

✨ You’re now connected to the Parallax network!

---

## Optional Steps

- If you want to help strengthen the network, you can open the peer-to-peer ports `32110 TCP & UDP` on your router/firewall so other nodes can connect to you.  
- Don’t worry if you skip this step — your node will still work.

---

## For Advanced Users

If you’re comfortable with the terminal, here are a few helpful commands:

- **Check version**:

  ```bash
  ./prlx version
  ```

- **Change data directory**:

  ```bash
  ./prlx --datadir /custom/path
  ```

- **Enable API**:

  ```bash
  ./prlx --http --http.api "eth,net,web3"
  ```

- **Increase log detail**:

  ```bash
  ./prlx --verbosity 4
  ```

- **Sync from Parallax testnet**:

  ```bash
  ./prlx --testnet
  ```

---

## Security Notice

⚠️ **Never expose RPC or WebSocket ports `8545`/`8546` directly to the internet** without proper protection. This can put your node and assets at risk.  

For most users, simply double-clicking the client and letting it run is the safest approach.
